--- a/docker_and_nginx/index.html
+++ b/docker_and_nginx/index.html
@@ -3,6 +3,7 @@
 <title>Testing</title>    
 </head>
 <body>
-  <h1>Let´s Run</h1>  
+  <h1>Now it´s run.. what we can do is testing other shape !</h1>
+  <center><h3>like this !</h3></center>  
 </body>
 </html>
